--- a/src/app/Components/BackOffice/vehicle/vehicle-map/vehicle-map.component.scss
+++ b/src/app/Components/BackOffice/vehicle/vehicle-map/vehicle-map.component.scss
@@ -1,48 +1,7 @@
-/* vehicle-map.component.scss */
-.map-container {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
+.map-wrapper, #map {
   width: 100%;
+  height: 100%;
 }
-
-.map-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem;
-  background-color: #f8f9fa;
-  border-bottom: 1px solid #dee2e6;
-
-  h2 {
-    margin: 0;
-    color: #343a40;
-  }
-
-  .back-button {
-    padding: 0.5rem 1rem;
-    background-color: #6c757d;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-
-    &:hover {
-      background-color: #5a6268;
-    }
-  }
-}
-
 #map {
-  flex-grow: 1;
-  width: 100%;
-}
-
-.map-info {
-  padding: 1rem;
-  background-color: #f8f9fa;
-  border-top: 1px solid #dee2e6;
-  text-align: center;
-  font-size: 0.9rem;
-  color: #6c757d;
+  height: 600px;
 }
