--- a/src/app/Components/FrontOffice/carpool/carpooling-offer/carpooling-offer.component.scss
+++ b/src/app/Components/FrontOffice/carpool/carpooling-offer/carpooling-offer.component.scss
@@ -136,3 +136,11 @@ h2 {
 }
 
 /* Decorative Line */
+.average-rating {
+    width: 100%;
+    height: 2px;
+    background-color: #ddd;
+    margin: 20px 0;
+    position: relative;
+    color: #721c24;
+}
